--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   charts_flutter: 0.6.0
   flutter_circular_chart: ^0.1.0
   http: ^0.12.0+1
+  dio_flutter_transformer: ^2.0.10
 
 
 # For information on the generic Dart part of this file, see the
